--- a/report.ipynb
+++ b/report.ipynb
@@ -49,7 +49,7 @@
     "### Анализ данных\n",
     "Не проводил очистку данных от мусора (бесполезных слов), т.к. не понятно, что в китайском языке есть мусор, и предположил, что RNN будет так только лучше понимать контекст. Поэтому я только очистил все не буквенные символы.\n",
     "\n",
-    "Для обучения модели использовал только ревью с оценкой 1 и 5, т.к при обучении сети со всеми ревью, accuracy держалось уверенно в районе 50%. \n",
+    "Для обучения модели использовал только ревью с оценкой 1 и 5, т.к при обучении сети на всех оценках, accuracy держалось уверенно в районе 50%. \n",
     "\n",
     "\n",
     "### Описание модели\n",
